<?xml version="1.0" encoding="utf-8"?>
<com.ebook.basebook.view.ImmerseView.layout.ImmerseLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/fl_search_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:transitionName="to_search"
            android:layout_marginStart="10dp">

            <EditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@drawable/bg_search_content"
                android:cursorVisible="false"
                android:gravity="center_vertical|start"
                android:hint="@string/search_book_or_author"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:lines="1"
                android:paddingStart="28dp"
                android:paddingEnd="28dp"
                android:textColor="#767676"
                android:textColorHint="#616161"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="8dp"
                android:src="@drawable/icon_search_nor"
                android:contentDescription="@string/please_input_author_or_work" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_to_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="15dp"
            android:text="@string/str_return"
            android:textSize="16sp"
            android:textColor="@drawable/selector_tv_black"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/bg_ib_pre"
            android:focusable="true" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ebook.basebook.view.refreshview.RefreshRecyclerView
            android:id="@+id/rfRv_search_books"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f1f1f1"
            app:bg_color="#00000000"
            app:font_color="#767676"
            app:second_color="#c1c1c1"
            app:second_max_progress="80dp"
            app:speed="2dp"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/ll_search_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible"
            android:background="#ffffff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#767676"
                    android:text="@string/str_search_history"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_search_history_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_ib_pre"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/str_clean"
                    android:textColor="@drawable/selector_tv_black"
                    android:textSize="16sp"
                    android:focusable="true" />
            </LinearLayout>

            <com.ebook.basebook.view.flowlayout.TagFlowLayout
                android:id="@+id/tfl_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:clickable="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/bg_shadow"
            android:layout_gravity="top" />
    </FrameLayout>
</com.ebook.basebook.view.ImmerseView.layout.ImmerseLinearLayout>